# OneCTFDAnnouncer

./: .dockerignore  .env.example  .gitignore  Dockerfile  INVITE.md  README.md  docker-compose.yml  generate_invite.py  pyproject.toml
.github/workflows/: ci-cd.yml  docker.yml  release.yml
onectfdannouncer/: __init__.py  bot.py  commands.py  config.py  ctfd_api.py  state_db.py  tasks.py  utils.py
